tests/baselines/reference/parserMemberAccessorDeclaration3.errors.txt
tests/cases/conformance/parser/ecmascript5/MemberAccessorDeclarations/parserMemberAccessorDeclaration3.ts(2,7): error TS2378: A 'get' accessor must return a value.


==== tests/cases/conformance/parser/ecmascript5/MemberAccessorDeclarations/parserMemberAccessorDeclaration3.ts (1 errors) ====
    class C {
      get 0() { }
          ~
!!! error TS2378: A 'get' accessor must return a value.
    }